--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-matplotlib~=3.6.2
-qiskit~=0.39.4
-torchvision~=0.14.1
-torch~=1.13.1
-numpy~=1.24.1
+matplotlib==3.7.3
+qiskit==0.45.0
+qiskit_terra==0.45.0
+torchvision==0.16.0
