minor edits. also add pytest-cov to testing suite.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,3 +38,4 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+        pytest --cov --cov-report=html:.pytest_cache/coverage_re
