--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
+        python -m pip install flake8 pytest pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -38,4 +38,4 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-        pytest --cov --cov-report=html:.pytest_cache/coverage_re
+        python -m pytest --cov=quantum_image_processing --cov-report=html:.pytest_cache/coverage_report
