--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 ipython==8.12.3
+matplotlib==3.6.3
 matplotlib==3.7.4
-pytest==7.4.3
-qiskit==0.45.0
-qiskit_algorithms==0.2.1
+qiskit==0.39.5
+qiskit==0.45.1
 qiskit_ibm_runtime==0.14.0
 qiskit_ibmq_provider==0.19.2
 qiskit_machine_learning==0.7.0
-qiskit_terra==0.45.0
-scikit_learn==1.3.2
+qiskit_terra==0.22.4
+qiskit_terra==0.45.1
+setuptools==67.7.2
+setuptools==60.2.0
+setuptools==69.0.3
+torch==1.13.1
 torch==2.1.0
+torchvision==0.14.1
 torchvision==0.16.0
