--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 ipython==8.12.3
 matplotlib==3.7.4
-pytest==7.4.3
-qiskit~=0.45.2
-qiskit_algorithms==0.2.1
+qiskit==0.39.5
+qiskit==0.45.1
 qiskit_ibm_runtime==0.14.0
 qiskit_ibmq_provider==0.19.2
 qiskit_machine_learning==0.7.0
-qiskit_terra==0.45.0
-scikit_learn==1.3.2
-torch~=2.2.0
-torchvision~=0.17.0
+qiskit_terra==0.45.1
+setuptools==69.0.3
+torch==1.13.1
+torchvision==0.14.1
 numpy~=1.23.5
 setuptools~=69.0.3
 mlflow~=2.10.1
