--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 ipython==8.12.3
 matplotlib==3.7.4
-qiskit==0.44
+qiskit==0.44.0
+qiskit_algorithms==0.2.2
 qiskit_ibmq_provider==0.20.2
-qiskit_machine_learning==0.7.0
+qiskit_machine_learning==0.7.1
 setuptools==69.0.3
-torch==2.0.0
-torchvision==0.15.0
-numpy~=1.23.5
-setuptools~=69.0.3
-mlflow~=2.10.1
+torch==1.13.1
+torchvision==0.14.1
+mlflow==2.10.1
