--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,6 +26,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@v2.2.3
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
