--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-cov pylint
+        python -m pip install flake8 pytest pytest-cov pylint coveralls
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Lint with pylint, flake8
@@ -43,4 +43,9 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-        python -m pytest --cov=quantum_image_processing --cov-report=html:.pytest_cache/coverage_report
+        python -m pytest --cov=piqture --cov-report=html:.pytest_cache/coverage_report
+
+    - name: Upload coverage to Coveralls
+      run: coveralls
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
