--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 ipython==8.12.3
 matplotlib==3.7.5
-qiskit==1.0.2
+qiskit>=1.0.0
 qiskit_algorithms==0.3.0
 qiskit_ibm_runtime==0.22.0
 qiskit_ibm_provider==0.10.0
@@ -8,5 +8,5 @@ qiskit_machine_learning==0.7.2
 setuptools==69.2.0
 torch==2.2.1
 torchvision==0.17.1
-mlflow==2.10.1
+mlflow>=2.10.1
 pytest==8.0.0
