--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,4 +1,4 @@
-name: Deploy to PyPI
+name: Deploy to Test PyPI
 
 on:
   push:
@@ -10,7 +10,7 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main'
+    if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
 
     strategy:
       matrix:
@@ -26,11 +26,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Build package
-        run: python setup.py sdist
+        run: python setup.py sdist bdist_wheel
 
-      - name: Upload package to PyPI
+      - name: Upload package to Test PyPI
         env:
-          USERNAME: __token__
-          PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
-          python setup.py sdist upload
+          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
