--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -3,9 +3,10 @@ name: Sphinx Docs
 on:
   push:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  build_and_deploy:
 
     runs-on: ubuntu-latest
     permissions:
@@ -24,14 +25,13 @@ jobs:
       run: |
         sphinx-build docs/source docs/build
 
-
-  deploy:
-
-    environment:
-      name: github-pages
-      url: ${{steps.deployment.outputs.page_url}}
-
-    runs-on: ubuntu-latest
+    - name: Deploy to gh-pages
+      uses: peaceiris/actions-gh-pages@v3
+      if: ${{ github.ref == 'refs/heads/main' }}
+      with:
+        publish_branch: gh-pages
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: docs/build/html
     needs: build
 
     steps:
