--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
-#      if: ${{ github.ref == 'refs/heads/main' }}
+      if: ${{ github.ref == 'refs/heads/main' }}
       with:
         publish_branch: gh-pages
         github_token: ${{ secrets.GITHUB_TOKEN }}
