--- a/.github/workflows/ibmq.yml
+++ b/.github/workflows/ibmq.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python package
+name: IBMQ
 
 on:
   push:
@@ -35,13 +35,3 @@ jobs:
     - name: Run circuit
       run:
         python piqture/sample_circuit.py
-
-    - name: Test with pytest
-      run: |
-        pytest
-        python -m pytest --cov=piqture --cov-report=html:.pytest_cache/coverage_report
-
-    - name: Upload coverage to Coveralls
-      run: coveralls
-      env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
