--- a/.github/workflows/ibmq.yml
+++ b/.github/workflows/ibmq.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v3
@@ -32,8 +32,12 @@ jobs:
         python -m pip install flake8 pytest pytest-cov pylint coveralls
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+    - name: Lint with pylint
+      run: |
+        pylint $(git ls-files '*.py')
+
     - name: Run circuit
-#      env:
-#        IBM_API_TOKEN: ${{ secrets.IBM_API_TOKEN }}
       run:
         python tests/sample_circuit.py
+      #      env:
+      #        IBM_API_TOKEN: ${{ secrets.IBM_API_TOKEN }}
