--- a/.github/workflows/ibmq.yml
+++ b/.github/workflows/ibmq.yml
@@ -32,9 +32,9 @@ jobs:
         python -m pip install flake8 pytest pytest-cov pylint coveralls
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Lint with pylint
-      run: |
-        pylint $(git ls-files '*.py')
+#    - name: Lint with pylint
+#      run: |
+#        pylint $(git ls-files '*.py')
 
     - name: Run circuit
       run:
