--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,4 @@
 [tox]
-requires = tox
 envlist = py{38,39,310,311,312}, lint, type
 isolated_build = true
 
@@ -12,14 +11,6 @@ commands =
 
 [testenv:lint]
 deps =
-    black
-    pylint
+    pre-commit
 commands =
-    black {posargs} piqture tests setup.py
-    pylint {posargs} piqture tests setup.py
-
-;[testenv:type]
-;deps =
-;    mypy
-;commands =
-;    mypy --ignore-missing-imports {posargs} piqture tests setup.py
+    pre-commit run --all-files
