update unit-tests.yml for correct python versions

--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        tox -e py{${{ matrx.python-version }}}
+        tox -e py${{ matrx.python-version }}
 
     - name: Upload coverage to Coveralls
       run: coveralls
