--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install tox
+        python -m pip install tox coveralls
 
     - name: Test with pytest
       run: |
