testing skip_install in linting

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ commands =
     pytest {posargs} --cov=piqture --cov-report=html:.pytest_cache/coverage_report
 
 [testenv:lint]
+skip_install = true
 deps =
     pre-commit
 commands =
