--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,4 @@
 [tox]
-requires = tox
 envlist = py{38,39,310,311,312}, lint, type
 isolated_build = true
 
@@ -11,15 +10,8 @@ commands =
     pytest {posargs} --cov=piqture --cov-report=html:.pytest_cache/coverage_report
 
 [testenv:lint]
+skip_install = true
 deps =
-    black
-    pylint
+    pre-commit
 commands =
-    black {posargs} piqture tests setup.py
-    pylint {posargs} piqture tests setup.py
-
-;[testenv:type]
-;deps =
-;    mypy
-;commands =
-;    mypy --ignore-missing-imports {posargs} piqture tests setup.py
+    pre-commit run --all-files
