--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,16 +1,13 @@
 name: Deploy to Test PyPI
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
   deploy:
 
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'workflow_dispatch'
 
     strategy:
       matrix:
@@ -34,8 +31,17 @@ jobs:
         run: python setup.py sdist bdist_wheel
 
       - name: Upload package to Test PyPI
+        if: github.event_name == 'workflow_dispatch'
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PIQTURE_TOKEN }}
+        run: |
+          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+
+      - name: Upload package to PyPI
+        if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
-          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+          python -m twine upload dist/*
