edit publishing workflows and setup files

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,26 +1,36 @@
-name: Deploy to Test PyPI
+name: Publish Package
 
 on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+#  github:
+#    name: Publish to GitHub
+#
+#    runs-on: ubuntu-latest
+#    if: github.event_name == 'workflow_dispatch'
+#
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v3
+#
+#      - name: Publish release
+#        uses: pass
+#        if: pass
+#        run: |
+#          pass
+#        with:
+#          token: pass
+
+  pypi:
+    name: Deploy to PyPI
 
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
 
-    strategy:
-      matrix:
-        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12"]
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
+        uses: actions/checkout@v3
 
       - name: Install dependencies
         run: |
