--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,12 +20,12 @@ jobs:
       - name: Build package
         run: python setup.py sdist bdist_wheel
 
-      - name: Upload package to Test PyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PIQTURE_TOKEN }}
-        run: |
-          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+      # - name: Upload package to Test PyPI
+      #   env:
+      #     TWINE_USERNAME: __token__
+      #     TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PIQTURE_TOKEN }}
+      #   run: |
+      #     python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
 
       - name: Upload package to PyPI
         if: github.ref == 'refs/heads/main'
