--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-ipython==8.12.3
 matplotlib==3.7.5
-qiskit>=1.0.0
-qiskit_algorithms==0.3.0
-qiskit_ibm_runtime==0.22.0
-qiskit_ibm_provider==0.10.0
-qiskit_machine_learning==0.7.2
-setuptools==70.0.0
-torch==2.2.1
+qiskit>=1.1.0
+setuptools>=70.0.0
 torchvision==0.17.1
-mlflow>=2.10.1
-pytest==8.0.0
