--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
-name: Build and Test
+name: Build_docker.yml
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -8,14 +9,41 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
-
+    outputs:
+      python-version: $({matrix.python-version})
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - name: Build Docker image
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v2
+
+    - name: Build Docker image for Python versions
       run: |
-        docker build --build-arg PYTHON_VERSION=${{ matrix.python-version }} -t your-app-name:${{ matrix.python-version }} .
+        docker build --build-arg PYTHON_VERSION=${{ matrix.python-version }} \
+                     -t piqture:${{ matrix.python-version }} .
+
+  build-app:
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      matrix:
+        app-version: ['v0.1.1']
+      max-parallel: 1
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v2
+
+    - name: Pull base Docker image from previous build
+      run: |
+        docker pull user/piqture:${{needs.build.outputs.python-version}}
+
+    - name: Build Docker image for App versions
+      run: |
+        docker build --build-arg APP_VERSION=${{ matrix.app-version }} \
+                     -t piqture-app:${{ matrix.app-version }} .
 
     - name: Run Docker container
       run: |
-        docker run your-app-name:${{ matrix.python-version }}
+        docker run piqture-app:${{ matrix.app-version }}
