--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
   rev: v4.5.0
   hooks:
     - id: trailing-whitespace
-
+    - id: end-of-file-fixer
       exclude: ^(docs|graphics|utils)/
 
     - id: end-of-file-fixer
