--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,41 +9,19 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
-    outputs:
-      python-version: $({matrix.python-version})
+        app-version: ['v0.1.1']  # Add more app versions as needed
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
 
-    - name: Build Docker image for Python versions
+    - name: Build Docker image for each combination of Python and App versions
       run: |
         docker build --build-arg PYTHON_VERSION=${{ matrix.python-version }} \
-                     -t piqture:${{ matrix.python-version }} .
-
-  build-app:
-    runs-on: ubuntu-latest
-    needs: build
-    strategy:
-      matrix:
-        app-version: ['v0.1.1']
-      max-parallel: 1
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Docker
-      uses: docker/setup-buildx-action@v2
-
-    - name: Pull base Docker image from previous build
-      run: |
-        docker pull user/piqture:${{needs.build.outputs.python-version}}
-
-    - name: Build Docker image for App versions
-      run: |
-        docker build --build-arg APP_VERSION=${{ matrix.app-version }} \
-                     -t piqture-app:${{ matrix.app-version }} .
+                     --build-arg APP_VERSION=${{ matrix.app-version }} \
+                     -t piqture:${{ matrix.app-version }}-${{ matrix.python-version }} .
 
     - name: Run Docker container
       run: |
-        docker run piqture-app:${{ matrix.app-version }}
+        docker run piqture:${{ matrix.app-version }}-${{ matrix.python-version }}
