--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,5 +41,5 @@ repos:
 #- repo: https://github.com/pre-commit/mirrors-mypy
 #  rev: v1.9.0
 #  hooks:
-#    - id: mypy
+#    - id: mypyn
 #      exclude: docs
