--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
   rev: v4.5.0
   hooks:
     - id: trailing-whitespace
+    - id: end-of-file-fixer
       exclude: ^(docs|graphics|utils)/
 
     - id: end-of-file-fixer
@@ -40,5 +41,5 @@ repos:
 #- repo: https://github.com/pre-commit/mirrors-mypy
 #  rev: v1.9.0
 #  hooks:
-#    - id: mypy
+#    - id: mypyn
 #      exclude: docs
