--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,6 @@ repos:
   rev: v4.5.0
   hooks:
     - id: trailing-whitespace
-    - id: end-of-file-fixer
       exclude: ^(docs|graphics|utils)/
 
     - id: end-of-file-fixer
@@ -41,5 +40,5 @@ repos:
 #- repo: https://github.com/pre-commit/mirrors-mypy
 #  rev: v1.9.0
 #  hooks:
-#    - id: mypyn
+#    - id: mypy
 #      exclude: docs
