changes to sphinx workflow to remove source files

--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -29,6 +29,7 @@ jobs:
 
     - name: Sphinx build
       run: |
+        rm -rf docs/source/
         sphinx-apidoc -o docs/source piqture
         sphinx-build docs/source docs/_build/html
 
