--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Sphinx build
       run: |
-        rm -f docs/source/*.rst
+        rm -f docs/source/piqture*.rst
         sphinx-apidoc -o docs/source piqture
         sphinx-build docs/source docs/_build/html
 
