Revert deletion of conf.py (#167)
* remove old source files

* changes to sphinx workflow to remove source files

* changes to sphinx and docs/source. revert deleting conf.py

* revert changes to rst files in source

--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Sphinx build
       run: |
-        rm -rf docs/source/
+        rm -f docs/source/piqture*.rst
         sphinx-apidoc -o docs/source piqture
         sphinx-build docs/source docs/_build/html
 
