--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -21,6 +21,8 @@ jobs:
 
     - name: Set up Python
       uses: actions/setup-python@v3
+      with:
+        python-version: "3.11"
 
     - name: Install dependencies
       run: |
