--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,9 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install wheel twine
 
+      - name: Clean old builds
+        run: rm -rf dist build *.egg-info
+
       - name: Build package
         run: python setup.py sdist bdist_wheel
 
