--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,23 @@
 requires = ["setuptools>=80.1.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-license-files = []
+[tool.setuptools.packages.find]
+include = ["piqture", "piqture.*", "tests"]
 
 [project]
 name = "piQture"
+version = "0.2.0"
+description = "piQture: A QML library for Image Processing"
+readme = "README.md"
+license = { text = "Apache-2.0" }
+authors = [
+  { name = "Saasha Joshi", email = "saashajoshi08@gmail.com" }
+]
+urls = { Homepage = "https://github.com/SaashaJoshi/piQture" }
+requires-python = ">=3.10"
+dependencies = [
+    "matplotlib==3.7.5",
+    "qiskit>=2.0.0",
+    "setuptools>=80.1.0",
+    "torchvision==0.22.1"
+]
