--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish Package
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 jobs:
   pypi:
@@ -23,17 +23,17 @@ jobs:
       - name: Build package
         run: python -m build
 
-      - name: Upload package to Test PyPI
-        env:
-         TWINE_USERNAME: __token__
-         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PIQTURE_TOKEN }}
-        run: |
-         python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
-
-#      - name: Upload package to PyPI
-#        if: github.ref == 'refs/heads/main'
+#      - name: Upload package to Test PyPI
 #        env:
-#          TWINE_USERNAME: __token__
-#          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+#         TWINE_USERNAME: __token__
+#         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PIQTURE_TOKEN }}
 #        run: |
-#          python -m twine upload dist/*
+#         python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+
+      - name: Upload package to PyPI
+        if: github.ref == 'refs/heads/main'
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          python -m twine upload dist/*
