--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,17 +15,20 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install wheel twine
+          python -m pip install setuptools wheel twine==6.0.1 build
+
+      - name: Clean old builds
+        run: rm -rf dist build *.egg-info
 
       - name: Build package
-        run: python setup.py sdist bdist_wheel
+        run: python -m build
 
-      # - name: Upload package to Test PyPI
-      #   env:
-      #     TWINE_USERNAME: __token__
-      #     TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PIQTURE_TOKEN }}
-      #   run: |
-      #     python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+#      - name: Upload package to Test PyPI
+#        env:
+#         TWINE_USERNAME: __token__
+#         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PIQTURE_TOKEN }}
+#        run: |
+#         python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
 
       - name: Upload package to PyPI
         if: github.ref == 'refs/heads/main'
